Fix inaccessible color contrast ratio

--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -61,7 +61,7 @@
 }
 
 .color-danger {
-  @apply text-red-500 dark:text-red-300;
+  @apply text-red-600 dark:text-red-300;
 }
 
 .p-dialog {
